# unesco_data_collection

./: .flake8  .gitignore  .pylintrc  LICENSE  Makefile  Pipfile  README.md  UNESCO online document overview (Ben's first look, VT19).gsheet  mypy.ini  pyproject.toml  setup.py
archive/data/: legal_instrument_index.xlsx
archive/data/legal_instrument_corpus (dates first).txt/: 1945_CONSTITUTION_0201_015244_1945_london.txt  1948_CONVENTION_0201_012064_1948_beirut.txt  1954_CONVENTION_0201_013637_1954_the_hague.txt  1958_CONVENTION_0201_013036_1958_paris.txt  1958_CONVENTION_0201_015395_1958_paris.txt  1960_CONVENTION_0201_012949_1960_paris.txt  1962_CONVENTION_0201_015321_1962_paris.txt  1971_CONVENTION_0201_015241_1971_paris.txt  1972_RECOMMENDATION_0201_013087_1972.txt  1974_CONVENTION_0201_013636_1974_brussels.txt  1976_RECOMMENDATION_0201_013089_1976.txt  1976_RECOMMENDATION_0201_013133_1976.txt  1978_RECOMMENDATION_0201_013134_1978.txt  1978_RECOMMENDATION_0201_013137_1978.txt  1979_CONVENTION_0201_013516_1979_paris.txt  1979_CONVENTION_0201_015218_1979_madrid.txt  1980_RECOMMENDATION_0201_013138_1980.txt  1980_RECOMMENDATION_0201_013139_1980.txt  1980_RECOMMENDATION_0201_013140_1980.txt  1981_CONVENTION_0201_013518_1981_arusha.txt  1989_RECOMMENDATION_0201_013141_1989.txt  1997_CONVENTION_0201_013522_1997_lisbon.txt  2003_DECLARATION_0201_017718_2003.txt  2005_CONVENTION_0201_031038_2005_paris.txt  2014_CONVENTION_0201_049282_2014_addis_ababa.txt  2015_DECLARATION_0201_013150_2015.txt
archive/data/proceedings (copy from openscience)/: 139984mul.txt  160364mulb.txt  160488mulb.txt  182922mulb.txt  235201mul.txt
courier/: Notes.md  README.md  article_index.csv  article_index.py  compile_issues.py  config.py  corpora.py  courier_metadata.py  elements.py  extract_articles.py  extract_text_pdfbox.py  extract_text_tesseract.py  find_odd_pages.sh  landscape_pages.txt  metadata.py  overlap_check.py  pdfbox_extract.py  split_article_pages.py  tesseract_extract.py  tmp.py  utils.py
courier/cli/: tagged2article.py
courier/elements/: __init__.py  assign_page_service.py  consolidate_text_service.py  elements.py  export_articles.py  export_tagged_issues.py  statistics.py  utils.py
courier/extract/: README.md  cli.py  interface.py  java_extractor.py  pdfbox_extractor.py  pdfminer_extractor.py  pdfplumber_extractor.py  tesseract_extractor.py  utils.py
courier/scripts/: copy_overlapping_pages.sh  corpora.py  corpus_report.py  excel_to_csv.py  extract_raw_corpora.py  find_double_pages.sh  pdfbox_to_xml.sh  tagged_issue_to_articles.py
courier/templates/: article.txt.jinja  article.xml.jinja  courier_issue.xml.jinja  test.xml.jinja
courier/utils/: __init__.py  logging.py  utils.py
courier/utilss/: logging.py
data/: article_titles.csv  legal_instrument_index.csv  legal_instrument_index.xlsx
data/courier/: overlap_match_stats.csv  overlapping_pages.csv
data/courier/double_pages/: exclude.txt
data/courier/metadata/: article_index_page_corrections.csv  double_pages_exclusions.csv  overlap.csv  overlap_stats.csv  overlap_stats_fuzzywuzzy.csv  overlap_stats_regex.csv  overlap_stats_uppercase.csv
data/courier/xml/: 014256engo.xml  016653engo.xml  020805engo.xml  023681engo.xml  040945engo.xml  042993engo.xml  044064engo.xml  046076engo.xml  046520engo.xml  049738engo.xml  050399engo.xml  050495engo.xml  052770engo.xml  052935engo.xml  053853engo.xml  (+297 more)
data/legal_instrument_corpus (dates first).txt/: 1952_CONVENTION_0201_015381_1952_geneva.txt  1956_RECOMMENDATION_0201_013062_1956.txt  1960_CONVENTION_0201_012949_1960_paris.txt  1961_CONVENTION_0201_013645_1961_rome.txt  1962_RECOMMENDATION_0201_013067_1962.txt  1966_RECOMMENDATION_0201_013084_1966.txt  1968_RECOMMENDATION_0201_013085_1968.txt  1970_CONVENTION_0201_013039_1970_paris.txt  1970_RECOMMENDATION_0201_013086_1970.txt  1971_CONVENTION_0201_013646_1971_geneva.txt  1974_CONVENTION_0201_013512_1974_mexico_city.txt  1974_RECOMMENDATION_0201_013088_1974.txt  1976_RECOMMENDATION_0201_013097_1976.txt  1976_RECOMMENDATION_0201_013132_1976.txt  1978_CONVENTION_0201_013517_1978_paris.txt  1978_DECLARATION_0201_013161_1978.txt  1978_RECOMMENDATION_0201_013134_1978.txt  1978_RECOMMENDATION_0201_013135_1978.txt  1978_RECOMMENDATION_0201_013136_1978.txt  1978_RECOMMENDATION_0201_013137_1978.txt  1983_CONVENTION_0201_013523_1983_bangkok.txt  1989_CONVENTION_0201_013059_1989_paris.txt  1989_RECOMMENDATION_0201_013141_1989.txt  1997_RECOMMENDATION_0201_013144_1997.txt  2001_CONVENTION_0201_013520_2001_paris.txt  2001_DECLARATION_0201_013179_2001.txt  2003_DECLARATION_0201_017720_2003.txt  2019_CONVENTION_0201_049557_2019_paris.txt
data/proceedings (copy from openscience)/: 114049mulo.txt  114592eng.txt  118484mulb.txt  159254mul.txt  160241mulb.txt  160433mulb.txt  160847engb.txt  188903mul.txt  232630mul.txt  247901mul.txt
docker/: Dockerfile  README.md  ocrmypdf.sh  reocr.sh
legal_instruments/: extract.py  legal_instruments.py  pipeline.py  tasks.py
purgatory/: compile_issues.py  extract_articles.py
purgatory/tests/: compile_issues_test.py  extract_articles_test.py
src/conventions/: convention_parser.py
src/courier_ocr/: Dockerfile  README.md  convert_to_pages.py  t4re
src/legal_instruments/: extract.py  legal_instruments.py  pipeline.py  tasks.py
src/tests/: test_tests.py
tests/: conftest.py  courier_extract_text_test.py  courier_test.py  test_extract.py  test_tests.py
tests/courier/: article_index_page_ref_correction_service_test.py  article_index_test.py  compile_issues_test.py  config_test.py  courier_metadata_test.py  courier_test.py  elements_test.py  extract_articles_test.py  extract_text_test.py  metadata_test.py  output_test.py  overlap_check_test.py  pdfbox_extract_test.py  split_article_pages_test.py  tesseract_extract_test.py  utils_test.py
tests/fixtures/: invalid_chars.xml  sample_response_index_page.html  sample_response_page.html  tests_fixtures_courier.zip:Zone.Identifier
tests/legal_instruments/: legal_instruments_test.py
tests/other/: logging_test.py  other_test.py  output_test.py
(+474 files in other folders)
