[tool.poetry]
name = "unesco_data_collection"
version = "0.3.0"
description = "Curation of UNESCO documents for the INIDUN project."
authors = ["aibakeneko <aibakeneko at gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
argh = "^0.26.2"
bs4 = "^0.0.1"
ftfy = "^6.1.1"
fuzzysearch = "^0.7.3"
Jinja2 = "^3.0.3"
JPype1 = "^1.3.0"
loguru = "^0.6.0"
more-itertools = "^9.0.0"
nltk = "^3.7"
openpyxl = "^3.0.9"
pandas = "^1.4.1"
pdf2image = "^1.16.0"
pdfplumber = "^0.7.0"
pytesseract = "^0.3.9"
python-pdfbox = "^0.1.8"
requests = "^2.27.1"
thefuzz = {extras = ["speedup"], version = "^0.19.0"}
tqdm = "^4.63.0"
untangle = "^1.1.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
flake8-black = "^0.3.3"
flake8-pytest-style = "^1.6.0"
flake8-quotes = "^3.3.1"
httpretty = "^1.1.4"
ipykernel = "^6.17.0"
isort = "^5.10.1"
mypy = "^0.982"
pyinstrument = "^4.4.0"
pylint = "^2.15.5"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
types-requests = "^2.28.11.4"
types-setuptools = "^65.5.0.2"
types-toml = "^0.10.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py310"]
exclude = '''
(
  \.git
  | \.pypy_cache
  | \.pytest_cache
  | \.mypy_cache
  | deprecated
)
'''

[tool.isort]
profile = "black"
line_length = 120
py_version = "auto"
float_to_top = true
src_paths = [ "courier", "legal_instruments", "tests" ]

[tool.pytest.ini_options]
log_cli = "False"
testpaths = [
    "tests",
]
python_files = "*_test.py"
python_functions = "test_*"
markers = [
    "java: marks tests as java dependent (deselect with '-m \"not java\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]

[tool.coverage.run]
branch = true
omit = [
    "**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]
show_missing = true
sort = "Name"